--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Images
+name: Base CI CD
 
 on:
   push:
@@ -29,23 +29,24 @@ jobs:
         if: contains(github.event.head_commit.message, '[auth-api]')
         run: |
           docker compose build auth-api
-          docker tag dockerizing-nestjs-monorepo-auth-api:latest choijewon/dockerizing-nestjs-monorepo-auth-api:latest
-          docker push choijewon/dockerizing-nestjs-monorepo-auth-api:latest
+          docker tag auth-api:latest ${{ secrets.DOCKER_USERNAME }}/auth-api:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/auth-api:latest
 
       - name: Build and Push Cat API
         if: contains(github.event.head_commit.message, '[cat-api]')
         run: |
           docker compose build cats-api
-          docker tag dockerizing-nestjs-monorepo-cats-api:latest choijewon/dockerizing-nestjs-monorepo-cats-api:latest
-          docker push choijewon/dockerizing-nestjs-monorepo-cats-api:latest
+          docker tag cats-api:latest ${{ secrets.DOCKER_USERNAME }}/cats-api:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/cats-api:latest
 
-      - name: Build and Push All
-        if: contains(github.event.head_commit.message, '[All]')
-        run: |
-          docker compose build
-          docker tag dockerizing-monorepo-auth-api:latest choijewon/dockerizing-nestjs-monorepo-auth-api:latest
-          docker push choijewon/dockerizing-nestjs-monorepo-auth-api:latest
-          docker tag monorepo-cats-api
+      # 임시 주석
+      # - name: Build and Push All
+      # if: contains(github.event.head_commit.message, '[All]')
+      #   run: |
+      #     docker compose build
+      #     docker tag dockerizing-monorepo-auth-api:latest choijewon/dockerizing-nestjs-monorepo-auth-api:latest
+      #     docker push choijewon/dockerizing-nestjs-monorepo-auth-api:latest
+      #     docker tag monorepo-cats-api
 
       - name: Deploy to dev
         uses: appleboy/ssh-action@master
@@ -64,9 +65,9 @@ jobs:
                 sudo docker stop auth-api || true
                 sudo docker rm auth-api || true
                 # 최신 auth-api 이미지 가져오기
-                sudo docker pull ${{ secrets.DOCKER_USERNAME }}/dockerizing-nestjs-monorepo-auth-api:latest
+                sudo docker pull ${{ secrets.DOCKER_USERNAME }}/auth-api:latest
                 # 새로운 auth-api 컨테이너 실행
-                sudo docker run -d --name auth-api -p 3300:3300 ${{ secrets.DOCKER_USERNAME }}/dockerizing-nestjs-monorepo-auth-api:latest
+                sudo docker run -d --name auth-api -p 3300:3300 ${{ secrets.DOCKER_USERNAME }}/auth-api:latest
                 ;;
               *"[cat-api]"*)
                 echo "Deploying cats-api..."
@@ -74,9 +75,9 @@ jobs:
                 sudo docker stop cats-api || true
                 sudo docker rm cats-api || true
                 # 최신 cats-api 이미지 가져오기
-                sudo docker pull ${{ secrets.DOCKER_USERNAME }}/dockerizing-nestjs-monorepo-cats-api:latest
+                sudo docker pull ${{ secrets.DOCKER_USERNAME }}/cats-api:latest
                 # 새로운 cats-api 컨테이너 실행
-                sudo docker run -d --name cats-api -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/dockerizing-nestjs-monorepo-cats-api:latest
+                sudo docker run -d --name cats-api -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/cats-api:latest
                 ;;
               *)
                 echo "No specific API deployment keyword found in the commit message."
