--- a/apps/cats/Dockerfile
+++ b/apps/cats/Dockerfile
@@ -1,5 +1,5 @@
 # Build Application Image
-From node:20-alpine AS builder
+FROM node:20-alpine AS builder
 
 WORKDIR /app
 
@@ -24,4 +24,4 @@ COPY --from=builder /app/node_modules ./node_modules
 EXPOSE 3000
 
 
-# CMD ["node", "dist/apps/cats/main.js"]
+CMD ["node", "dist/apps/cats/main.js"]
