--- a/.github/workflows/cats-api-push.yml
+++ b/.github/workflows/cats-api-push.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build_and_push:
-    if: github.event.pull_request.merged == true && contains(github.event.pull_request.title, '[cats-api]')
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
