github action naming division

--- a/.github/workflows/cats-api-push.yml
+++ b/.github/workflows/cats-api-push.yml
@@ -10,7 +10,7 @@ on:
       - 'apps/cats/**'
 
 jobs:
-  build_and_push:
+  cats_api_deploy:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
