--- a/.github/workflows/auth-api-push.yml
+++ b/.github/workflows/auth-api-push.yml
@@ -10,7 +10,7 @@ on:
       - 'apps/auth-api/**'
 
 jobs:
-  build_and_push:
+  auth_api_deploy:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
